--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,10 @@
   </head>
   <body>
     <div id="root"></div>
+    <script
+      src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
+      async
+      defer
+    ></script>
   </body>
 </html>
