--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="root"></div>
     <script
-      src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
+      src="https://www.google.com/recaptcha/api.js?&render=explicit"
       async
       defer
     ></script>
